--- a/about.html
+++ b/about.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Site Metas -->
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="description" conten qt="" />
   <meta name="author" content="" />
 
   <title>Visualizing the Housing Crisis</title>
 
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Libre Baskerville" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="staticFiles/css/style_v3.css" rel="stylesheet" />
 
-  <!-- Style Sheet -->
-  <link href="../staticFiles/css/style.css" rel="stylesheet" />
-  <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-
-  
+  <!-- google icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
+
 
 <body class="sub_page">
   <div class="hero_area">
@@ -30,7 +33,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="../staticFiles/images/logo.png" alt=""   style="width:200px;"/>
+            <img src="staticFiles/images/logo.png" alt="" style="width:200px;" />
           </a>
           <div class="navbar-collapse" id="">
             <ul class="navbar-nav justify-content-between ">
@@ -79,13 +82,13 @@
 
   <section class="about_section layout_padding-bottom">
     <div class="square-box">
-      <img src="../staticFiles/images/square.png" alt="">
+      <img src="staticFiles/images/square.png" alt="">
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="../staticFiles/images/about-img.png" alt="">
+            <img src="staticFiles/images/about-img.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
@@ -96,11 +99,19 @@
               </h2>
             </div>
             <p>
-              The current state of zoning laws and tenant evictions in the United States is closely tied with the history of redlining, segregation, and racism. Understanding the inequality that exists in these spaces is important to create more equitable communities.</p>
+              The current state of zoning laws and tenant evictions in the United States is closely tied with the
+              history of redlining, segregation, and racism. Understanding the inequality that exists in these spaces is
+              important to create more equitable communities.</p>
 
-            <p>We are teaming up with the Othering and Belonging Institute (OBI), which studies the relationship between zoning laws and racism, and the Eviction Research Network (ERN) at the Urban Displacement Project, which studies demographic disparities in evictions. Together, we will utilize applied data science approaches to study these issues in housing.</p>
+            <p>We are teaming up with the Othering and Belonging Institute (OBI), which studies the relationship between
+              zoning laws and racism, and the Eviction Research Network (ERN) at the Urban Displacement Project, which
+              studies demographic disparities in evictions. Together, we will utilize applied data science approaches to
+              study these issues in housing.</p>
 
-            <p>The goal of our project is to create a tool that aids the process of ending evictions and restrictive zoning policies. Our potential target audience includes policymakers, social justice advocates, academics, as well as developers, landlords, and the general public. We hope our product illustrates an alternative to the status quo of the current housing crisis.
+            <p>The goal of our project is to create a tool that aids the process of ending evictions and restrictive
+              zoning policies. Our potential target audience includes policymakers, social justice advocates, academics,
+              as well as developers, landlords, and the general public. We hope our product illustrates an alternative
+              to the status quo of the current housing crisis.
             </p>
             <a href="">
               Read More
@@ -125,7 +136,7 @@
             </h5>
             <div>
               <div class="img-box">
-                <img src="../staticFiles/images/location.png" width="18px" alt="">
+                <img src="staticFiles/images/location.png" width="18px" alt="">
               </div>
               <p>
                 Address
@@ -133,7 +144,7 @@
             </div>
             <div>
               <div class="img-box">
-                <img src="../staticFiles/images/phone.png" width="12px" alt="">
+                <img src="staticFiles/images/phone.png" width="12px" alt="">
               </div>
               <p>
                 +01 1234567890
@@ -141,7 +152,7 @@
             </div>
             <div>
               <div class="img-box">
-                <img src="../staticFiles/images/mail.png" width="18px" alt="">
+                <img src="staticFiles/images/mail.png" width="18px" alt="">
               </div>
               <p>
                 demo@gmail.com
@@ -212,16 +223,16 @@
             </form>
             <div class="social_box">
               <a href="">
-                <img src="../staticFiles/images/fb.png" alt="">
+                <img src="staticFiles/images/fb.png" alt="">
               </a>
               <a href="">
-                <img src="../staticFiles/images/twitter.png" alt="">
+                <img src="staticFiles/images/twitter.png" alt="">
               </a>
               <a href="">
-                <img src="../staticFiles/images/linkedin.png" alt="">
+                <img src="staticFiles/images/linkedin.png" alt="">
               </a>
               <a href="">
-                <img src="../staticFiles/images/youtube.png" alt="">
+                <img src="staticFiles/images/youtube.png" alt="">
               </a>
             </div>
           </div>
@@ -245,9 +256,9 @@
   <!-- end  footer section -->
 
 
-  <script type="text/javascript" src="../staticFiles/js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="../staticFiles/js/bootstrap.js"></script>
-  <script type="text/javascript" src="../staticFiles/js/custom.js"></script>
+  <script type="text/javascript" src="staticFiles/js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="staticFiles/js/bootstrap.js"></script>
+  <script type="text/javascript" src="staticFiles/js/custom.js"></script>
 
 </body>
 </body>
