--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
   <title>Visualizing the Housing Crisis</title>
 
   <!-- fonts style -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Space+Grotesk:wght@400;700&display=swap"
+    rel="stylesheet">
+
+
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Libre Baskerville" rel="stylesheet" />
   <!-- Custom styles for this template -->
