--- a/about.html
+++ b/about.html
@@ -18,9 +18,15 @@
   <!-- Style Sheet -->
   <link href="../staticFiles/css/style.css" rel="stylesheet" />
   <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
 
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+
+
 </head>
 
 <body class="sub_page">
@@ -30,7 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="../staticFiles/images/logo.png" alt=""   style="width:200px;"/>
+            <img src="../staticFiles/images/logo.png" alt="" style="width:200px;" />
           </a>
           <div class="navbar-collapse" id="">
             <ul class="navbar-nav justify-content-between ">
@@ -96,11 +102,19 @@
               </h2>
             </div>
             <p>
-              The current state of zoning laws and tenant evictions in the United States is closely tied with the history of redlining, segregation, and racism. Understanding the inequality that exists in these spaces is important to create more equitable communities.</p>
+              The current state of zoning laws and tenant evictions in the United States is closely tied with the
+              history of redlining, segregation, and racism. Understanding the inequality that exists in these spaces is
+              important to create more equitable communities.</p>
 
-            <p>We are teaming up with the Othering and Belonging Institute (OBI), which studies the relationship between zoning laws and racism, and the Eviction Research Network (ERN) at the Urban Displacement Project, which studies demographic disparities in evictions. Together, we will utilize applied data science approaches to study these issues in housing.</p>
+            <p>We are teaming up with the Othering and Belonging Institute (OBI), which studies the relationship between
+              zoning laws and racism, and the Eviction Research Network (ERN) at the Urban Displacement Project, which
+              studies demographic disparities in evictions. Together, we will utilize applied data science approaches to
+              study these issues in housing.</p>
 
-            <p>The goal of our project is to create a tool that aids the process of ending evictions and restrictive zoning policies. Our potential target audience includes policymakers, social justice advocates, academics, as well as developers, landlords, and the general public. We hope our product illustrates an alternative to the status quo of the current housing crisis.
+            <p>The goal of our project is to create a tool that aids the process of ending evictions and restrictive
+              zoning policies. Our potential target audience includes policymakers, social justice advocates, academics,
+              as well as developers, landlords, and the general public. We hope our product illustrates an alternative
+              to the status quo of the current housing crisis.
             </p>
             <a href="">
               Read More
