update font styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <title>Visualizing the Housing Crisis</title>
 
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/css?family=Libre Baskerville" rel="stylesheet" />
   <!-- Custom styles for this template -->
   <link href="staticFiles/css/style_v3.css" rel="stylesheet" />
@@ -77,7 +82,7 @@
   <!-- Introduction -->
   <div class="section_wide" id="introduction">
     <div id="introduction" class="content_wide">
-      <h1>Visualizing the Housing Crisis</h1>
+      <p class="headline">Visualizing the Housing Crisis</p>
       <h2>in Richmond, CA</h2>
       <p class="emphasis_p">Everyone deserves housing.</p>
       <div>
