update font styles

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <!-- Introduction -->
   <div class="section_wide" id="introduction">
     <div id="introduction" class="content_wide">
-      <p class="headline">Visualizing the Housing Crisis</p>
+      <h1 class="headline">Visualizing the Housing Crisis</h1>
       <h2>in Richmond, CA</h2>
       <p class="emphasis_p">Everyone deserves housing.</p>
       <div>
