Update font styles

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
   <!-- Redlining -->
   <div class="section_wide" id="historys">
     <div class="content_wide">
-      <h1>How did we get here?</h1>
+      <h2>How did we get here?</h2>
       <p>
         These disparate outcomes for Black and White populations did not occur
         by accident:
@@ -513,7 +513,7 @@
   <!-- Issues in Housing Continue Today -->
   <div class="center_section" style="height: fit-content">
     <div class="content_center">
-      <h1>Issues in Housing Continue Today</h1>
+      <h2 id="issues_today">Issues in Housing Continue Today</h2>
       <p>
         The systemic injustices of the past have created disparities not
         easily unraveled. An equitable future requires coordinated effort and
@@ -598,7 +598,7 @@
   <!-- What's the fix? -->
   <div class="section_wide" id="solutions_menu">
     <div class="content_wide">
-      <h1>What's the Fix?</h1>
+      <h2>What's the Fix?</h2>
       <p>
         There are no quick fixes to the housing crisis affecting residents in
         Richmond and beyond. But there are many actors and many approaches
