Update font styles

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Sans+Narrow:wght@700&display=swap"
     rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Libre Baskerville" rel="stylesheet" />
   <!-- Custom styles for this template -->
   <link href="staticFiles/css/style_v3.css" rel="stylesheet" />
 
@@ -83,7 +82,7 @@
   <div class="section_wide" id="introduction">
     <div id="introduction" class="content_wide">
       <h1 class="headline">Visualizing the Housing Crisis</h1>
-      <h2>in Richmond, CA</h2>
+      <h3>in Richmond, CA</h3>
       <p class="emphasis_p">Everyone deserves housing.</p>
       <div>
         <p>
