--- a/about.html
+++ b/about.html
@@ -1,269 +1,184 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Site Metas -->
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="description" conten qt="" />
   <meta name="author" content="" />
 
   <title>Visualizing the Housing Crisis</title>
 
-
-  <!-- Style Sheet -->
-  <link href="../staticFiles/css/style.css" rel="stylesheet" />
-  <!-- Google Font -->
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
+  <!-- fonts style -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Sans+Narrow:wght@700&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre Baskerville" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="staticFiles/css/style_v3.css" rel="stylesheet" />
 
-
+  <!-- google icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
-<body class="sub_page">
-  <div class="hero_area">
-    <!-- header section strats -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
-            <img src="../staticFiles/images/logo.png" alt="" style="width:200px;" />
-          </a>
-          <div class="navbar-collapse" id="">
-            <ul class="navbar-nav justify-content-between ">
-              <div class="User_option">
-                <li class="">
-                  <a class="mr-4" href="">
-                    Login
-                  </a>
-                  <a class="" href="">
-                    Sign up
-                  </a>
-                </li>
-              </div>
-            </ul>
+<body>
+  <nav id="navbar" class="nav-bar">
 
-            <div class="custom_menu-btn">
-              <button onclick="openNav()">
-                <span class="s-1">
+    <h4>&nbsp; &nbsp;<a href="index.html">← Back to Narrative</a></h4>
+    <!-- <ul>
+      <li id="Intro">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\intro.svg" />
+        </span>
+        <a href="#introduction">Introduction</a>
+      </li>
+      <li id="Welcome">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\richmond.svg" />
+        </span>
+        <a href="#richmond_section">Richmond, CA</a>
+      </li>
+      <li id="HousingDisparities">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\disparity.svg" />
+        </span>
+        <a href="#notthesame">Disparities</a>
+      </li>
+      <li id="HousingHistory">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\history.svg" />
+        </span>
+        <a href="#historys">History</a>
+      </li>
+      <li id="HousingIssuesToday">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\issues.svg" />
+        </span>
+        <a href="#issues_today">Housing Issues Today</a>
+      </li>
+      <li id="SolutionsMenu">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\solution.svg" />
+        </span>
+        <a href="#solutions_menu">What's the Fix?</a>
+      </li>
+      <li id="BetterFuture">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\future.svg" />
+        </span>
+        <a href="#imagine_future">Imagine a Better Future</a>
+      </li>
+    </ul> -->
+  </nav>
 
-                </span>
-                <span class="s-2">
+  <div class="blank"></div>
+  <!-- Introduction -->
+  <div class="section_wide" id="introduction">
+    <div id="introduction" class="content_wide">
 
-                </span>
-                <span class="s-3">
+      <h1>About Us</h1>
+      <p> Our team is an interdisciplinary group of graduate students from the <a href="https://ischool.berkeley.edu/"
+          target="_">University
+          of California, Berkeley School of Information. </a></p>
+      <h2>Aiste Cechaviciute </h2>
+      <p> </p>
+      <h2>Angela Liu</h2>
+      <p> </p>
+      <h2>Rui Li</h2>
+      <p> </p>
+      <h2>Gareen Puglia</h2>
+      <p>Gareen recently graduated from UC Berkeley with a Masters in Information Management and Systems with a Graduate
+        Certificate in New Media from the Berkeley Center for New Media. Before her graduate studies, Gareen worked in
+        journalism and digital media as a Story Producer.</p>
+      <h2>Ian Castro</h2>
+      <p> </p>
+      <h2>Shahan Shahid Nawaz</h2>
+      <p> </p>
 
-                </span>
-              </button>
-            </div>
-            <div id="myNav" class="overlay">
-              <div class="overlay-content">
-                <a href="about.html">ABOUT</a>
-                <a href="https://evictionresearch.net/">ERN</a>
-                <a href="https://belonging.berkeley.edu/our-story">OBI</a>
-                <a href="contact.html">CONTACT US</a>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
+
+
+      <h1>Our Partners</h1>
+      <h3>Othering and Belonging Institute</h3>
+      <p>
+        <a href="https://belonging.berkeley.edu/housing" target="_">UC Berkeley’s Othering and Belonging Institute</a>
+        is a group dedicated to advancing research that transforms
+        structural
+        marginalization and inequality. This institute is composed of a coalition of scholars, community organizers,
+        researchers, artists, and communicators.
+      </p>
+      <h3>Eviction Research Network</h3>
+      <p>
+        <a href="https://evictionresearch.net/" target="_">The Eviction Research Network</a> is a UC Berkeley research
+        group under the larger Urban Displacement Project that
+        focuses
+        on collecting, analyzing, and mapping the demographics of eviction. Described as “a collaborative research
+        project
+        for
+        social good,” the ERN is to increase public awareness of the prevalence and drivers of eviction nationwide,
+        particularly
+        in understudied regions.
+      </p>
+      <h3>RichmondLAND</h3>
+      <p>
+        <a href="https://www.richmondland.org/">Richmond LAND</a> is a member-based organization whose mission is to
+        build community power and maintain long-term
+        affordability by holding land and properties in a community land trust. Through grassroots community organizing,
+        land
+        acquisition, and housing development, Richmond LAND removes land from the speculative real estate market to
+        create
+        pathways for affordable housing and lasting community benefit.
+      </p>
+
+      <h1>Acknowledgements</h1>
+      <p>So many people and organizations contributed to our project. We would like to highlight them all with our
+        deepest
+        gratitude.
+      </p>
+      <p>
+        Thank you to our faculty advisor Professor Morgan Ames, for being a constant source of support and an extremely
+        positive
+        sounding board. Thank you for providing us with such incredible feedback and for making this process such an
+        enjoyable
+        one.
+      </p>
+      <p>
+        Thank you to Professor Steve Fadden, who provided our team with incredible guidance on our UX Research. Thank
+        you for
+        teaching us the power of listening and for being so generous with your time.
+      </p>
+      <p>
+        Thank you to our research partners: OBI, ERN, and Richmond LAND. We are thankful for the opportunity to
+        collaborate and
+        realize our goal with their support and willingness to share data and speak to our team. We hope to have
+        advanced their
+        goals through our work.
+      </p>
+      <p>
+        Thank you to everyone we spoke to for our informational interviews— the insight and information we gained from
+        each
+        discussion was invaluable to our work. Thank you for taking the time to talk with us about your work and what
+        you would
+        like to see in the housing space. Our narrative is informed by your insight and feedback.
+      </p>
+      <p>
+        Thank you to the ISchool community and faculty— we are very touched by the support we have received and have
+        been
+        motivated by the passion of our peers. We hope we have been able to teach you all as much as you have taught us.
+      </p>
+
+    </div>
   </div>
 
-
-  <!-- about section -->
-
-  <section class="about_section layout_padding-bottom">
-    <div class="square-box">
-      <img src="../staticFiles/images/square.png" alt="">
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="../staticFiles/images/about-img.png" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                Visualizing the Housing Crisis
-              </h2>
-            </div>
-            <p>
-              The current state of zoning laws and tenant evictions in the United States is closely tied with the
-              history of redlining, segregation, and racism. Understanding the inequality that exists in these spaces is
-              important to create more equitable communities.</p>
-
-            <p>We are teaming up with the Othering and Belonging Institute (OBI), which studies the relationship between
-              zoning laws and racism, and the Eviction Research Network (ERN) at the Urban Displacement Project, which
-              studies demographic disparities in evictions. Together, we will utilize applied data science approaches to
-              study these issues in housing.</p>
-
-            <p>The goal of our project is to create a tool that aids the process of ending evictions and restrictive
-              zoning policies. Our potential target audience includes policymakers, social justice advocates, academics,
-              as well as developers, landlords, and the general public. We hope our product illustrates an alternative
-              to the status quo of the current housing crisis.
-            </p>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
-
-
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="info_contact">
-            <h5>
-              Restrictive Zoning
-            </h5>
-            <div>
-              <div class="img-box">
-                <img src="../staticFiles/images/location.png" width="18px" alt="">
-              </div>
-              <p>
-                Address
-              </p>
-            </div>
-            <div>
-              <div class="img-box">
-                <img src="../staticFiles/images/phone.png" width="12px" alt="">
-              </div>
-              <p>
-                +01 1234567890
-              </p>
-            </div>
-            <div>
-              <div class="img-box">
-                <img src="../staticFiles/images/mail.png" width="18px" alt="">
-              </div>
-              <p>
-                demo@gmail.com
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_info">
-            <h5>
-              Information
-            </h5>
-            <p>
-              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="info_links">
-            <h5>
-              Useful Link
-            </h5>
-            <ul>
-              <li>
-                <a href="">
-                  There are many
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  variations of
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  passages of
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  Lorem Ipsum
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  available, but
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  the i
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_form ">
-            <h5>
-              Newsletter
-            </h5>
-            <form action="">
-              <input type="email" placeholder="Enter your email">
-              <button>
-                Subscribe
-              </button>
-            </form>
-            <div class="social_box">
-              <a href="">
-                <img src="../staticFiles/images/fb.png" alt="">
-              </a>
-              <a href="">
-                <img src="../staticFiles/images/twitter.png" alt="">
-              </a>
-              <a href="">
-                <img src="../staticFiles/images/linkedin.png" alt="">
-              </a>
-              <a href="">
-                <img src="../staticFiles/images/youtube.png" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end info_section -->
-
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section ">
-    <div class="container">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
-    </div>
-  </section>
-  <!-- end  footer section -->
-
-
-  <script type="text/javascript" src="../staticFiles/js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="../staticFiles/js/bootstrap.js"></script>
-  <script type="text/javascript" src="../staticFiles/js/custom.js"></script>
-
-</body>
+  <script src="staticFiles/js/script.js"></script>
 </body>
 
 </html>
