--- a/index.html
+++ b/index.html
@@ -82,25 +82,24 @@
   <div class="section_wide" id="introduction">
     <div id="introduction" class="content_wide">
       <h1 class="headline">Visualizing the Housing Crisis</h1>
-      <h3>in Richmond, CA</h3>
+      <h3 style="color: var(--dark)">in Richmond, CA</h3>
       <p class="emphasis_p">Everyone deserves housing.</p>
       <div>
         <p>
-          And yet current & historical practices of exclusionary policy,
+          And yet, current and historical practices of exclusionary policy,
           rising rents, and slow development have contributed to the
           affordable housing shortage, inequitable evictions, and broad
           displacement that make up the “housing crisis” today. Whether or not
           you’ve heard of this term, it's important to understand the elements
           that make this such a complex problem.
         </p>
-        <p class="emphasis_p">
-          We believe that knowledge can empower positive change— this crisis
-          is complex, but this is a great place to get started.
-        </p>
         <p>
+          <span class="emphasis_p">
+            We believe that knowledge can empower positive change— this crisis
+            is complex, but this is a great place to get started.</span>
           Understanding the legacy of the past will help contextualize the
-          present, and work towards a more just future—we hope you'll come
-          away with an understand the affordable housing crisis by exploring
+          present, and work towards a more just future. We hope you'll come
+          away with an understanding of the affordable housing crisis by exploring
           this case study of Richmond, CA.
         </p>
       </div>
@@ -130,9 +129,9 @@
           engagement, including in the housing space.
         </p>
         <h3>Richmond by the Numbers:</h3>
-        <p class="disclaimer">*statistics of 2021 Census</p>
         <div>
           <object type="image/svg+xml" data="staticFiles\images\richmond_stat\rch_stat.svg"></object>
+          <p class="credit">*statistics of 2021 Census</p>
         </div>
       </div>
     </div>
