Add new pages and footer

--- a/about.html
+++ b/about.html
@@ -177,8 +177,15 @@
 
     </div>
   </div>
+  <div class="footer">
+    <p style="text-align: center;">
+      <a href="index.html">Narrative</a> | <a href="about.html">About</a> | <a href="sources.html">Sources &
+        Methods</a>
+    </p>
+    Visualizing the Housing Crisis is a capstone project for Masters of Information Management at the
+    School of Information, University of California, Berkeley.
+  </div>
 
-  <script src="staticFiles/js/script.js"></script>
 </body>
 
 </html>
