--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <h2>Welcome to Richmond, CA</h2>
       <div class="main_p">
         <p>
-          Located in Contra Costa county in the East San Francisco Bay Area,
+          Located in Contra Costa County in the East San Francisco Bay Area,
           the city of Richmond is racially and economically diverse. Richmond
           feels like the average American city. A small, working-class
           suburban community, it went through a period of post-WWII
@@ -712,29 +712,14 @@
     </section>
   </div>
   <div class="blank"></div>
-
-  <!-- <div class="section_wide">
-      <footer>
-        <ol>
-          <li id="footnotes">
-            <a
-              href="https://belonging.berkeley.edu/single-family-zoning-san-francisco-bay-area#footnote2_bdmrqlk"
-              target="_blank"
-              >Othering and Belonging Institute</a
-            >
-            <a href="#footnotes-ref" aria-label="Back to content">↩</a>
-          </li>
-          <li id="everything">
-            <a
-              href="https://worksinprogress.co/issue/the-housing-theory-of-everything"
-              target="_blank"
-              >Works in Progress</a
-            >
-            <a href="#everything-ref" aria-label="Back to content">↩</a>
-          </li>
-        </ol>
-      </footer>
-    </div> -->
+  <div class="footer">
+    <p style="text-align: center;">
+      <a href="index.html">Narrative</a> | <a href="about.html">About</a> | <a href="sources.html">Sources &
+        Methods</a>
+    </p>
+    Visualizing the Housing Crisis is a capstone project for Masters of Information Management at the School
+    of Information, University of California, Berkeley.
+  </div>
 
   <script src="staticFiles/js/script.js"></script>
 </body>
