--- a/sources.html
+++ b/sources.html
@@ -1,271 +1,106 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Site Metas -->
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="description" conten qt="" />
   <meta name="author" content="" />
 
-  <title>Teaser</title>
-
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <title>Visualizing the Housing Crisis</title>
 
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Raleway:400,700&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Sans+Narrow:wght@700&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre Baskerville" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="staticFiles/css/style_v3.css" rel="stylesheet" />
+
+  <!-- google icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
-<body class="sub_page">
-  <div class="hero_area">
-    <!-- header section strats -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
-          </a>
-          <div class="navbar-collapse" id="">
-            <ul class="navbar-nav justify-content-between ">
-              <div class="User_option">
-                <li class="">
-                  <a class="mr-4" href="">
-                    Login
-                  </a>
-                  <a class="" href="">
-                    Sign up
-                  </a>
-                </li>
-              </div>
-            </ul>
+<body>
+  <nav id="navbar" class="nav-bar">
 
-            <div class="custom_menu-btn">
-              <button onclick="openNav()">
-                <span class="s-1">
+    <h4>&nbsp; &nbsp;<a href="index.html">← Back to Narrative</a></h4>
+    <!-- <ul>
+      <li id="Intro">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\intro.svg" />
+        </span>
+        <a href="#introduction">Introduction</a>
+      </li>
+      <li id="Welcome">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\richmond.svg" />
+        </span>
+        <a href="#richmond_section">Richmond, CA</a>
+      </li>
+      <li id="HousingDisparities">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\disparity.svg" />
+        </span>
+        <a href="#notthesame">Disparities</a>
+      </li>
+      <li id="HousingHistory">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\history.svg" />
+        </span>
+        <a href="#historys">History</a>
+      </li>
+      <li id="HousingIssuesToday">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\issues.svg" />
+        </span>
+        <a href="#issues_today">Housing Issues Today</a>
+      </li>
+      <li id="SolutionsMenu">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\solution.svg" />
+        </span>
+        <a href="#solutions_menu">What's the Fix?</a>
+      </li>
+      <li id="BetterFuture">
+        <span class="hover-image">
+          <img src="staticFiles\images\nav_icon\future.svg" />
+        </span>
+        <a href="#imagine_future">Imagine a Better Future</a>
+      </li>
+    </ul> -->
+  </nav>
 
-                </span>
-                <span class="s-2">
+  <div class="blank"></div>
+  <!-- Introduction -->
+  <div class="section_wide" id="introduction">
+    <div id="introduction" class="content_wide">
 
-                </span>
-                <span class="s-3">
-
-                </span>
-              </button>
-            </div>
-            <div id="myNav" class="overlay">
-              <div class="overlay-content">
-                <a href="index.html">HOME</a>
-                <a href="about.html">ABOUT</a>
-                <a href="house.html">HOUSE</a>
-                <a href="price.html">PRICING</a>
-                <a href="contact.html">CONTACT US</a>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
+      <h1>Sources</h1>
+      <p> Our team is an interdisciplinary group of graduate students from the <a href="https://ischool.berkeley.edu/"
+          target="_">University
+          of California, Berkeley School of Information. </a></p>
+    </div>
   </div>
 
+  <div class="footer">
+    <p style="text-align: center;">
+      <a href="index.html">Narrative</a> | <a href="about.html">About</a> | <a href="sources.html">Sources &
+        Methods</a>
+    </p>
+    Visualizing the Housing Crisis is a capstone project for Masters of Information Management at the
+    School of Information, University of California, Berkeley.
+  </div>
 
-  <!-- contact section -->
-
-  <section class="contact_section layout_padding-top">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Get In Touch
-        </h2>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6 px-0">
-          <div class="map_container">
-            <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-5 ">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Name" />
-              </div>
-              <div>
-                <input type="email" placeholder="Email" />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone Number" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
-              </div>
-              <div class="d-flex ">
-                <button>
-                  Send
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- end contact section -->
-
-
-
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="info_contact">
-            <h5>
-              About Apartment
-            </h5>
-            <div>
-              <div class="img-box">
-                <img src="images/location.png" width="18px" alt="">
-              </div>
-              <p>
-                Address
-              </p>
-            </div>
-            <div>
-              <div class="img-box">
-                <img src="images/phone.png" width="12px" alt="">
-              </div>
-              <p>
-                +01 1234567890
-              </p>
-            </div>
-            <div>
-              <div class="img-box">
-                <img src="images/mail.png" width="18px" alt="">
-              </div>
-              <p>
-                demo@gmail.com
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_info">
-            <h5>
-              Information
-            </h5>
-            <p>
-              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="info_links">
-            <h5>
-              Useful Link
-            </h5>
-            <ul>
-              <li>
-                <a href="">
-                  There are many
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  variations of
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  passages of
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  Lorem Ipsum
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  available, but
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  the i
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_form ">
-            <h5>
-              Newsletter
-            </h5>
-            <form action="">
-              <input type="email" placeholder="Enter your email">
-              <button>
-                Subscribe
-              </button>
-            </form>
-            <div class="social_box">
-              <a href="">
-                <img src="images/fb.png" alt="">
-              </a>
-              <a href="">
-                <img src="images/twitter.png" alt="">
-              </a>
-              <a href="">
-                <img src="images/linkedin.png" alt="">
-              </a>
-              <a href="">
-                <img src="images/youtube.png" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end info_section -->
-
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section ">
-    <div class="container">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
-    </div>
-  </section>
-  <!-- end  footer section -->
-
-
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
-
-</body>
 </body>
 
 </html>
