changes to index

--- a/index.html
+++ b/index.html
@@ -599,11 +599,14 @@
       <h2>What's the Fix?</h2>
       <p>
         There are no quick fixes to the housing crisis affecting residents in
-        Richmond and beyond. But there are many actors and many approaches
-        working towards housing justice. We’ve summarized these interventions
-        across three themes: Production, Preservation, and Protection. We need
-        movement across all of these areas and more; as we see above, some of
+        Richmond and beyond, but there are many efforts in motion attempting to move towards housing justice.
+      </p>
+      <p>
+        Below, we’ve summarized these interventions across three themes: <span class="emphasis_p">Production,
+          Preservation, and Protection.</span> Click on the nodes to learn more about different solutions.
+        We need movement across all of these areas and more; as we see earlier, some of
         these solutions can seem to be in direct conflict.</p>
+      </p>
     </div>
   </div>
   <div class="tableauPlaceholder" id="viz1683222914345" style="max-width: 93%; position: relative; padding: 5vh;">
