Update population chart

--- a/index.html
+++ b/index.html
@@ -428,10 +428,8 @@
       </p>
     </div>
   </div>
-  <div class="blank_sm"></div>
-  <div>
-    <img id="redline" src="staticFiles\images\redlining\redline.svg" />
-  </div>
+
+
   <!-- <div class="section_wide">
       <div class="content_wide">
         <p class="emphasis_p" id="redline_quote">
@@ -452,61 +450,33 @@
     </div> -->
 
   <!-- Timeline -->
-  <div class="blank"></div>
-  <div class="section_narrow" id="timeline">
-    <div class="content_narrow" id="history_timepoints">
-      <h2>Let's go back in time</h2>
-      <p>
-        There is a long history of segregation and racist policies that are
-        rooted in the history of Richmond. Starting with World War II, we can
-        see the intersecting influences of wartime economies, corporate
-        interests, migration, and racial bias in the city.
-      </p>
-      <p>
-        The following timeline connects these historical events to the lack of
-        affordable housing in Richmond today.
-      </p>
-    </div>
-    <div class="image_box_med">
-      <div class="tableauPlaceholder" id="viz1683067315620" style="position: relative">
-        <noscript><a href="#"><img alt="Richmond, CA Total Population over Time "
-              src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;po&#47;poplineplottotal&#47;Sheet1&#47;1_rss.png"
-              style="border: none" /></a></noscript><object class="tableauViz" style="display: none">
-          <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-          <param name="embed_code_version" value="3" />
-          <param name="site_root" value="" />
-          <param name="name" value="poplineplottotal&#47;Sheet1" />
-          <param name="tabs" value="no" />
-          <param name="toolbar" value="yes" />
-          <param name="static_image"
-            value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;po&#47;poplineplottotal&#47;Sheet1&#47;1.png" />
-          <param name="animate_transition" value="yes" />
-          <param name="display_static_image" value="yes" />
-          <param name="display_spinner" value="yes" />
-          <param name="display_overlay" value="yes" />
-          <param name="display_count" value="yes" />
-          <param name="language" value="en-US" />
-          <param name="filter" value="publish=yes" />
-        </object>
-      </div>
-      <script type="text/javascript">
-        var divElement = document.getElementById("viz1683067315620");
-        var vizElement = divElement.getElementsByTagName("object")[0];
-        vizElement.style.width = "85%";
-        vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
-        var scriptElement = document.createElement("script");
-        scriptElement.src =
-          "https://public.tableau.com/javascripts/api/viz_v1.js";
-        vizElement.parentNode.insertBefore(scriptElement, vizElement);
-      </script>
-    </div>
-  </div>
-
+  <div class="blank_sm"></div>
   <iframe
     src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1eD-gRHmMaJ6m3V_Se1UKbPZWC2PFQ67UI_mZuNt_vCY&font=Default&lang=en&initial_zoom=2&height=650"
     width="100%" height="650" webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder="0"></iframe>
 
-  <div class="blank"></div>
+  <div class='tableauPlaceholder' id='viz1683438327800' style='position: relative; max-height: 400px;'><noscript><a
+        href='#'><img alt='Dashboard 1 '
+          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ri&#47;RichmondPopulationOverTime&#47;Dashboard1&#47;1_rss.png'
+          style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+      <param name='embed_code_version' value='3' />
+      <param name='site_root' value='' />
+      <param name='name' value='RichmondPopulationOverTime&#47;Dashboard1' />
+      <param name='tabs' value='no' />
+      <param name='toolbar' value='yes' />
+      <param name='static_image'
+        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ri&#47;RichmondPopulationOverTime&#47;Dashboard1&#47;1.png' />
+      <param name='animate_transition' value='yes' />
+      <param name='display_static_image' value='yes' />
+      <param name='display_spinner' value='yes' />
+      <param name='display_overlay' value='yes' />
+      <param name='display_count' value='yes' />
+      <param name='language' value='en-US' />
+      <param name='filter' value='publish=yes' />
+    </object></div>
+  <script
+    type='text/javascript'>                    var divElement = document.getElementById('viz1683438327800'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = '470px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = '470px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '470px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
   <!-- Issues in Housing Continue Today -->
   <div class="center_section" style="height: fit-content">
@@ -609,38 +579,30 @@
       </p>
     </div>
   </div>
-  <div class="tableauPlaceholder" id="viz1683222914345" style="max-width: 93%; position: relative; padding: 5vh;">
-    <noscript><a href="#"><img
-          alt="A system map of policy interventions and organizations focused on address the housing crisis in Richmond, CA and beyond. Interventions are organized by theme. Click on the nodes to learn more about different solutions. "
-          src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Sheet1&#47;1_rss.png"
-          style="border: none" /></a></noscript><object class="tableauViz" style="display: none">
-      <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-      <param name="embed_code_version" value="3" />
-      <param name="site_root" value="" />
-      <param name="name" value="solutions-menu&#47;Sheet1" />
-      <param name="tabs" value="no" />
-      <param name="toolbar" value="yes" />
-      <param name="static_image"
-        value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Sheet1&#47;1.png" />
-      <param name="animate_transition" value="yes" />
-      <param name="display_static_image" value="yes" />
-      <param name="display_spinner" value="yes" />
-      <param name="display_overlay" value="yes" />
-      <param name="display_count" value="yes" />
-      <param name="language" value="en-US" />
-      <param name="filter" value="publish=yes" />
-    </object>
-  </div>
-  <script type="text/javascript">
-    var divElement = document.getElementById("viz1683222914345");
-    var vizElement = divElement.getElementsByTagName("object")[0];
-    vizElement.style.width = "100%";
-    vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
-    var scriptElement = document.createElement("script");
-    scriptElement.src =
-      "https://public.tableau.com/javascripts/api/viz_v1.js";
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-  </script>
+
+
+  <div class='tableauPlaceholder' id='viz1683429546023' style='position: relative; padding-left: 5vh;'><noscript><a
+        href='#'><img alt='Dashboard 1 '
+          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1_rss.png'
+          style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+      <param name='embed_code_version' value='3' />
+      <param name='site_root' value='' />
+      <param name='name' value='solutions-menu&#47;Dashboard1' />
+      <param name='tabs' value='no' />
+      <param name='toolbar' value='yes' />
+      <param name='static_image'
+        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1.png' />
+      <param name='animate_transition' value='yes' />
+      <param name='display_static_image' value='yes' />
+      <param name='display_spinner' value='yes' />
+      <param name='display_overlay' value='yes' />
+      <param name='display_count' value='yes' />
+      <param name='language' value='en-US' />
+      <param name='filter' value='publish=yes' />
+    </object></div>
+  <script
+    type='text/javascript'>                    var divElement = document.getElementById('viz1683429546023'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1300px'; vizElement.style.height = '627px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1300px'; vizElement.style.height = '627px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
 
   <div class="blank_sm"></div>
