--- a/sources.html
+++ b/sources.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <nav id="navbar" class="nav-bar">
+  <nav id="navbar" class="nav-bar" style="position: static !important">
 
     <h4>&nbsp; &nbsp;<a href="index.html">← Back to Narrative</a></h4>
     <!-- <ul>
