--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         How plans are implemented is dependent on the priorities, resources,
         capacity of the city's government, and other actors like developers
         and voters. A lack of funding for affordable housing is both a
-        national and local complaint. Richmond's county, Contra Costa, for
+        national and local complaint. Richmond's county (Contra Costa), for
         example, has been criticized in particular for not following through
         on project expectations by disproportionately falling short of
         developing housing for lower-income households.
@@ -504,7 +504,7 @@
 
       <img src="staticFiles\images\issues_today\local_gov.svg" style="width: 100%" />
       <p>
-        The trend that Contra Costa county (where Richmond is) exhibits here
+        The trend that Contra Costa County exhibits here
         of disproportionally under-developing housing planned for very low and
         low income households mirrors the rest of the Bay Area. The
         Association of Bay Area Governments (ABAG), sets goals for housing
