Update about and sources page

--- a/about.html
+++ b/about.html
@@ -92,7 +92,12 @@
       <h2>Aiste Cechaviciute </h2>
       <p> </p>
       <h2>Angela Liu</h2>
-      <p> </p>
+      <p>Angela Liu is a data engineer and data scientist interested in building data systems that improve delivery of
+        nonprofit and
+        public services.
+        Prior to her Masters, Angela worked to improve the US healthcare system in both a management consulting and
+        nonprofit
+        capacity.</p>
       <h2>Rui Li</h2>
       <p> </p>
       <h2>Gareen Puglia</h2>
@@ -177,10 +182,11 @@
 
     </div>
   </div>
+  <div class="blank_sm"></div>
   <div class="footer">
     <p style="text-align: center;">
-      <a href="index.html">Narrative</a> | <a href="about.html">About</a> | <a href="sources.html">Sources &
-        Methods</a>
+      <a href="about.html">About</a> | <a href="sources.html">Sources &
+        Methods</a> | <a href="index.html">Back to Narrative</a>
     </p>
     Visualizing the Housing Crisis is a capstone project for Masters of Information Management at the
     School of Information, University of California, Berkeley.
