--- a/sources.html
+++ b/sources.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <nav id="navbar" class="nav-bar" style="position: static !important">
+  <nav id="navbar" class="nav-bar">
 
     <h4>&nbsp; &nbsp;<a href="index.html">← Back to Narrative</a></h4>
     <!-- <ul>
@@ -85,17 +85,16 @@
   <div class="section_wide" id="introduction">
     <div id="introduction" class="content_wide">
 
-      <h1>Sources</h1>
-      <p> Our team is an interdisciplinary group of graduate students from the <a href="https://ischool.berkeley.edu/"
-          target="_">University
-          of California, Berkeley School of Information. </a></p>
+      <h1>Sources & Methods</h1>
+      <p></p>
+
     </div>
   </div>
-
+  <div class="blank_sm"></div>
   <div class="footer">
     <p style="text-align: center;">
-      <a href="index.html">Narrative</a> | <a href="about.html">About</a> | <a href="sources.html">Sources &
-        Methods</a>
+      <a href="about.html">About</a> | <a href="sources.html">Sources &
+        Methods</a> | <a href="index.html">Back to Narrative</a>
     </p>
     Visualizing the Housing Crisis is a capstone project for Masters of Information Management at the
     School of Information, University of California, Berkeley.
