--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           affordable housing shortage, inequitable evictions, and broad
           displacement that make up the “housing crisis” today. Whether or not
           you’ve heard of this term, it's important to understand the elements
-          that make this such a complex problem. problem problem
+          that make this such a complex problem.
         </p>
         <p>
           <span class="emphasis_p">
